--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8"
-    content ="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8"/>
     <title>Sofi Salcedo Website</title>
-    <link rel="stylesheet" href="C:\Users\ka200\OneDrive\Escritorio\HTML-Personal File\My site\css\styles.css">
+    <link rel="stylesheet" href="C:\Users\ka200\OneDrive\Escritorio\HTML-Personal File\My site\styles.css">
     <link rel= "icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
