--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Sofi Salcedo Website</title>
-    <link rel="stylesheet" href="C:\Users\ka200\OneDrive\Escritorio\HTML-Personal File\my site\styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel= "icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
