--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Sofi Salcedo Website</title>
-    <link type="text/css" rel="https://github.com/Sofisalcedo/my-site/blob/main/css/styles.css" />
+    <link type="text/css" rel="/my-site/blob/main/css/styles.css" />
     <link rel= "icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
