--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <center>
     <div class="top-container">
     <h1 > Hi! I'm Sofi :) </h1>
-    <p style=  "font-size: 20px;"> Front end web developer.</p>
+    <p style= "font-size: 20px;"> Front end web developer.</p>
     <img class="sun" src="cartoon sun moon emoji.png" alt="sun picture">
 
     </div>
@@ -21,7 +21,7 @@
     <div class="middle-container">
       <div class="profile">
         <h2 >About me.</h2>
-        <img src="pfp.png" alt="Sofi's picture">
+        <img src="PFP.png" alt="Sofi's picture">
         <p class="intro"> My first experience with coding was in highschool where I learned and made a couple of small projects on C++ . I decided to switch careers at the begining of this year and I didn't look back. Drawing, painting and art in general is something that's been part of me since I can remember.
         Combining my love for art and coding has helped me found my true passion which I love sharing with the world < 3 </p>
       </div>
@@ -29,7 +29,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row1">
-          <img class="coding" src="—pngtree—programming concept in 3d isometric_7601753.png" >
+          <img class="coding" src="—Pngtree—programming concept in 3d isometric_7601753.png" >
           <h2>Coding</h2>
           <p class="experiencia">I started my education in the field with The Complete 2022 Web Development Bootcamp from Udemy where I learned HTML5, CSS, JavaScript, Bootstrap4...</p>
         </div>
