--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         <div class="skill-row1">
           <img class="coding" src="—Pngtree—programming concept in 3d isometric_7601753.png" >
           <h2>Coding</h2>
-          <p class="experiencia">I started my education in the field with The Complete 2022 Web Development Bootcamp from Udemy where I learned HTML5, CSS, JavaScript, Bootstrap4...</p>
+          <p class="experiencia">I started my education in the field with The Complete 2022 Web Development Bootcamp from Udemy where I learned HTML5, CSS, JavaScript, Bootstrap4, DOM, JQuery, Node.js, SQL, MangoDB, Mongoose, 
+          and React.js</p>
         </div>
         <div class="skill-row2">
           <img class="puppet" src="multiple abstract social media human.png">
           <h2>Projects</h2>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <p>Of course during my time learning these languajes and softwares I created several projects you can see on my portfolio website.</p>
         </div>
       </div>
       </div>
