--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="skill-row2">
           <img class="puppet" src="multiple abstract social media human.png">
           <h2>Projects</h2>
-          <p>Of course during my time learning these languajes and softwares I created several projects you can see on my portfolio website.</p>
+          <p class="projectos">Of course during my time learning these languajes and softwares I created several projects you can see on my portfolio website.</p>
         </div>
       </div>
       </div>
