--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <div class="profile">
         <h2 >About me.</h2>
         <img src="PFP.png" alt="Sofi's picture">
-        <p class="intro"> My first experience with coding was in highschool where I learned and made a couple of small projects on C++ . I decided to switch careers at the begining of this year and I didn't look back. Drawing, painting and art in general is something that's been part of me since I can remember.
-        Combining my love for art and coding has helped me found my true passion which I love sharing with the world < 3 </p>
+        <p class="intro">  Welcome to my playground. Here you can find links to some articles about the tech world I find interesting and my web projects, these are mainly results from my efforts to understand design and programming. Have fun!
+        Combining my creativity and knowledge in coding has helped me found my true passion which I love sharing with the world < 3 </p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row1">
-          <img class="coding" src="—Pngtree—programming concept in 3d isometric_7601753.png" >
+          <img class="Good reads" src="—Pngtree—programming concept in 3d isometric_7601753.png" >
           <h2>Coding</h2>
           <p class="experiencia">I started my education in the field with The Complete 2022 Web Development Bootcamp from Udemy where I learned HTML5, CSS, JavaScript, Bootstrap4, DOM, JQuery, Node.js, SQL, MangoDB, Mongoose, 
           and React.js</p>
