--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="profile">
         <h2 >About me.</h2>
         <img src="PFP.png" alt="Sofi's picture">
-        <p class="intro">  Welcome to my playground. Here you can find links to some articles about the tech world I find interesting and my web projects, these are mainly results from my efforts to understand design and programming. Have fun!
+        <p class="intro">  Welcome to my portfolio. Here you can find links to some articles about the tech world I find interesting and my web projects, these are mainly results from my efforts to understand design and programming. Have fun!
         Combining my creativity and knowledge in coding has helped me found my true passion which I love sharing with the world < 3 </p>
       </div>
       <hr>
